k8s/resources/ctfd/_namespace.yaml
# Namespace for CTFd and its dependencies (MariaDB and Redis)
---
apiVersion: v1
kind: Namespace
metadata:
  name: ctfd
